--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,24 @@
 
 	<build>
 		<plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-enforcer-plugin</artifactId>
+                            <version>1.3.1</version>
+                            <executions>
+                                <execution>
+                                    <id>enforce-versions</id>
+                                    <goals>
+                                        <goal>enforce</goal>
+                                    </goals>
+                                    <configuration>
+                                        <rules>
+                                            <DependencyConvergence/>
+                                        </rules>
+                                    </configuration>
+                                </execution>
+                            </executions>              
+                        </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -104,7 +122,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.3.6</version>
+			<version>4.3.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -114,7 +132,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
-			<version>4.3.6</version>
+			<version>4.3.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
